Added blog link

--- a/blogs.html
+++ b/blogs.html
@@ -45,11 +45,24 @@
                 <div class="timelineBlog-badge info"><i class="glyphicon glyphicon-list-alt"></i></div>
                 <div class="timelineBlog-panel">
                     <div class="timelineBlog-heading">
+                        <h4 class="timelineBlog-title">Robert Pullan <a href="https://www.titanprogramming.co.uk/blog.html"><i class="glyphicon glyphicon-link"></i></a></h4>
+                    </div>
+                    <div class="timelineBlog-body">
+                        <p>This is my new blog website which will contain articles for the Git, Cloud Computing, AWS and more. Currently, I'm working on adding articles for Git and will then move onto Cloud Computing.</p>
+                        <p>I enjoy writing the articles to help consolidate my learning on the topics.</p>
+                        <p><small class="text-muted pull-right">Added On Jan 04, 2020</small></p>
+                    </div>
+                </div>
+            </li>        
+            <li class="timelineBlog-inverted">
+                <div class="timelineBlog-badge info"><i class="glyphicon glyphicon-list-alt"></i></div>
+                <div class="timelineBlog-panel">
+                    <div class="timelineBlog-heading">
                         <h4 class="timelineBlog-title">Adetoun O. <a href="https://medium.com/@detoun4med/my-devops-journey-creating-infrastructure-diagram-using-lucidchart-b8725d5cdbdc"><i class="glyphicon glyphicon-link"></i></a></h4>
                     </div>
                     <div class="timelineBlog-body">
                         <p>My first timer/learners blog on Infrastructure Diagram</p>
-                        <p><small class="text-muted pull-right">Added On 02/01/2020</small></p>
+                        <p><small class="text-muted pull-right">Added On Jan 02, 2020</small></p>
                     </div>
                 </div>
             </li>
@@ -61,7 +74,7 @@
                     </div>
                     <div class="timelineBlog-body">
                         <p>Want to connect to that AWS EC2 instance you’re launching? Then you’ll need a key pair. Here are 2 easy steps for creating a key pair without having to go to the Amazon Management Console.</p>
-                        <p><small class="text-muted pull-right">Added On 30/12/2019</small></p>
+                        <p><small class="text-muted pull-right">Added On Dec 30, 2019</small></p>
                     </div>
                 </div>
             </li>            
@@ -73,7 +86,7 @@
                     </div>
                     <div class="timelineBlog-body">
                         <p>My blog is themed towards AWS, Infrastructure as Code.</p>
-                        <p><small class="text-muted pull-right">Added On 29/12/2019</small></p>
+                        <p><small class="text-muted pull-right">Added On Dec 29, 2019</small></p>
                     </div>
                 </div>
             </li>
@@ -97,7 +110,7 @@
                     </div>
                     <div class="timelineBlog-body">
                         <p>My blog post gives a hands-on guide on getting started with Git in Bertelsmann Tech Scholarship</p>
-                        <p><small class="text-muted pull-right">Added On 27/12/2019</small></p>
+                        <p><small class="text-muted pull-right">Added On Dec 27, 2019</small></p>
                     </div>
                 </div>
             </li>
@@ -109,23 +122,10 @@
                     </div>
                     <div class="timelineBlog-body">
                         <p>My blog post talks about AWS, GCP and Heroku. It also gives some explanation on IAAS, PAAS and SAAS</p>
-                        <p><small class="text-muted pull-right">Added On 22/12/2019</small></p>
+                        <p><small class="text-muted pull-right">Added On Dec 22, 2019</small></p>
                     </div>
                 </div>
             </li>
-            <li class="timelineBlog-inverted">
-                <div class="timelineBlog-badge info"><i class="glyphicon glyphicon-list-alt"></i></div>
-                <div class="timelineBlog-panel">
-                    <div class="timelineBlog-heading">
-                        <h4 class="timelineBlog-title">Robert Pullan <a href="https://robpullan85.github.io"><i class="glyphicon glyphicon-link"></i></a></h4>
-                    </div>
-                    <div class="timelineBlog-body">
-                        <p>My blog is themed towards software, cloud development and operations with articles on topics learnt from the Bertelsmann Tech Scholarship. Future plans include creating video tutorials, adding articles explaining programming techniques and configuring servers. When free time is available, I shall endure my hobby of investigating robotics or painting Games Workshop miniatures.</p>
-                        <p>The current blog deserves a makeover which it's currently receiving and will include a responsive design.</p>
-                        <p><small class="text-muted pull-right">Added On 18/12/2019</small></p>
-                    </div>
-                </div>
-            </li>            
         </ul>
     </div>
 </body></html>
