--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                                         </div>
                                         <div class="timeline-body">
                                             <p>Git and GitHub was my favourite area of the course. While learning the open source technology I compared this to standard TFS, my decision is I now prefer Git and GitHub due to the branching and excellent logging methods. In addition, I can apply Git to my personal projects as using TFS would not be practical.</p>
-                                            <p><small class="text-muted pull-right"> By Robert Pullan Dec 17, 2019</small></p>
+                                            <p><small class="text-muted pull-right"> By Robert Pullan. Dec 17, 2019</small></p>
                                         </div>
                                     </div>
                                 </li>
@@ -144,7 +144,7 @@
                                         </div>
                                         <div class="timeline-body">
                                             <p>Git and GitHub was simple to learn than expected. It provides excellent tools such as branching off to avoid damaging the main project when making changes before merging the differences back together.</p>
-                                            <p><small class="text-muted pull-right"> By Joe Bloggs Dec 17, 2019</small></p>
+                                            <p><small class="text-muted pull-right"> By Joe Bloggs. Dec 17, 2019</small></p>
                                         </div>
                                     </div>
                                 </li>
@@ -198,7 +198,7 @@
                                         </div>
                                         <div class="timeline-body">
                                             <p>The benefit to using Amazon EC2 servers is the ability to increase or decrease the number of server instances within minutes. You could not achieve this speed when managing each physical server on premise. Imagine a scenario, where a customer is complaining about poor performance due to the instance, you could resolve this issue within minutes instead of days or even weeks.</p>
-                                            <p><small class="text-muted pull-right"> By Robert Pullan 17/12/2019</small></p>
+                                            <p><small class="text-muted pull-right"> By Robert Pullan. Dec 17, 2019</small></p>
                                         </div>
                                     </div>
                                 </li>
@@ -210,7 +210,7 @@
                                         </div>
                                         <div class="timeline-body">
                                             <p>RDS will allow you to create, operate and maintain a relational database within the cloud. The simple scalability feature provides database administrators cost effective solutions and can automate time consuming tasks.</p>
-                                            <p><small class="text-muted pull-right"> By Joe Bloggs 17/12/2019</small></p>
+                                            <p><small class="text-muted pull-right"> By Robert Pullan. Dec 17, 2019</small></p>
                                         </div>
                                     </div>
                                 </li>
@@ -222,7 +222,7 @@
                                         </div>
                                         <div class="timeline-body">
                                             <p>CloudWatch is a metrics repository available in AWS. An AWS service puts metrics into the CloudWatch repository and the user can retrieve statistics based on those metrics. If user puts his own custom metrics into the repository, he can retrieve statistics on these metrics as well. Metrics is used to calculate statistics and then present the data graphically in the CloudWatch console. User can also configure alarm actions to stop, start, or terminate an Amazon EC2 instance when certain criteria are met. Furthermore, he can create alarms that initiate EC2 Auto Scaling and SNS actions.</p>
-                                            <p><small class="text-muted pull-right"> By Andrea Grande 28/12/2019</small></p>
+                                            <p><small class="text-muted pull-right"> By Andrea Grande. Dec 28, 2019</small></p>
                                         </div>
                                     </div>
                                 </li>
@@ -234,7 +234,7 @@
                                         </div>
                                         <div class="timeline-body">
                                             <p>Simple Storage Service (Amazon S3) is an AWS object storage service. It offers scalability, data availability, security, and performance. Amazon S3 is designed for 99.999999999% of durability, and stores data for millions of applications for companies all around the world.</p>
-                                            <p><small class="text-muted pull-right"> By Andrea Grande 01/01/2020</small></p>
+                                            <p><small class="text-muted pull-right"> By Andrea Grande. Jan 01, 2020</small></p>
                                         </div>
                                     </div>
                                 </li>
@@ -246,7 +246,7 @@
                                         </div>
                                         <div class="timeline-body">
                                             <p>Amazon Virtual Private Cloud (Amazon VPC) provides a logically isolated section of the AWS Cloud where a AWS user can launch resources in a virtual network. User can create a public subnet for his web servers that have access to the internet. He can also place backend systems in a private subnet with no internet access. Security groups and network access control lists helps control access to Amazon EC2 instances in each subnet.</p>
-                                            <p><small class="text-muted pull-right"> By Andrea Grande 01/01/2020</small></p>
+                                            <p><small class="text-muted pull-right"> By Andrea Grande. Jan 01, 2020</small></p>
                                         </div>
                                     </div>
                                 </li>
@@ -258,7 +258,7 @@
                                         </div>
                                         <div class="timeline-body">
                                             <p>Creating an Infrastructure diagram using your prefered tool helps to effectively communicate your design, topology and deployment to your team and relevant stakeholders.</p>
-                                            <p><small class="text-muted pull-right"> By Adetoun O. 02/01/2020</small></p>
+                                            <p><small class="text-muted pull-right"> By Adetoun O. Jan 02, 2020</small></p>
                                         </div>
                                     </div>
                                 </li>
@@ -282,7 +282,7 @@
                                         </div>
                                         <div class="timeline-body">
                                             <p>As geeky as this could be, I would develop and deploy my own internal system which I can access from anywhere when required. The web application will require user authentication to prevent rogue users accessing it. This system will be developmented to personally benefit my general life by the use of data.</p>
-                                            <p><small class="text-muted pull-right"> By Robert Pullan 17/12/2019</small></p>
+                                            <p><small class="text-muted pull-right"> By Robert Pullan. Dec 17, 2019</small></p>
                                         </div>
                                     </div>
                                 </li>
@@ -294,7 +294,7 @@
                                         </div>
                                         <div class="timeline-body">
                                             <p>My current role working in IT operations has required to me investigate hosting solutions. After completing this course, I shall recommend to my employer that we host our newly developed intranet using CloudFormation due to the added network and user security</p>
-                                            <p><small class="text-muted pull-right"> By Joe Bloggs 17/12/2019</small></p>
+                                            <p><small class="text-muted pull-right"> By Robert Pullan. Dec 17, 2019</small></p>
                                         </div>
                                     </div>
                                 </li>
@@ -306,7 +306,7 @@
                                         </div>
                                         <div class="timeline-body">
                                             <p>As a Product Manager with a Fintech startup, I intend to discuss the security benefits of AWS CloudFormation with my technical team and the possibility of deploying our on-going Investment Management project on AWS.</p>
-                                            <p><small class="text-muted pull-right"> By Adetoun O. 02/01/2020</small></p>
+                                            <p><small class="text-muted pull-right"> By Adetoun O. Jan 02, 2020</small></p>
                                         </div>
                                     </div>
                                 </li>
